--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,15 +363,248 @@ input{
 }
 
 /*=============== ABOUT ===============*/
+.about__data{
+    text-align: center;
+}
 
+.about__container{
+    row-gap: 2.5rem;
+}
+
+.about__description{
+    margin-bottom: var(--mb-2);
+}
+
+.about__img{
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.about__img-overlay{
+    overflow: var(--img-hidden);
+}
+
+.about__img-one{
+    width: 130px;
+}
+
+.about__img-two{
+    width: 180px;
+}
+
+.about__img-one,
+.about__img-two{
+    transition: var(--img-transition);
+}
+
+.about__img-one:hover,
+.about__img-two:hover{
+    transform: var(--img-scale);
+}
 
 /*=============== DISCOVER ===============*/
+.discover__card{
+    position: relative;
+    width: 200px;
+    overflow: var(--img-hidden);
+}
 
+.discover__data{
+    position: absolute;
+    bottom: 1.5rem;
+    left: 1rem;
+}
+
+.discover__title,
+.discover__description{
+    color: var(--white-color);
+}
+
+.discover__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-25);
+}
+
+.discover__description{
+    display: block;
+    font-size: var(--smaller-font-size);
+}
+
+.discover__img{
+    transition: var(--img-transition);
+}
+
+.discover__img:hover{
+    transform: var(--img-scale);
+}
 
 /*=============== EXPERIENCE ===============*/
+.experience__container{
+    row-gap: 2.5rem;
+    justify-content: center;
+    justify-items: center;
+}
 
+.experience__content{
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    justify-items: center;
+    padding: 0 2rem;
+}
+
+.expreience__number{
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-semi-bold);
+    margin-bottom: var(--mb-0-5);
+}
+
+.experience__description{
+    font-size: var(--small-font-size);
+}
+
+.experience__img{
+    position: relative;
+    padding-bottom: 2rem;
+}
+
+.experience__overlay:nth-child(1){
+    width: 263px;
+    margin-right: 2rem;
+}
+
+.experience__overlay:nth-child(2){
+    width: 120px;
+    position: absolute;
+    top: 2rem;
+    right: 0;
+}
+
+.experience__img-one,
+.experience__img-two{
+    transition: var(--img-transition);
+}
+
+.experience__img-one:hover,
+.experience__img-two:hover{
+    transform: var(--img-scale);
+}
+
+.experience__overlay{
+    overflow: hidden;
+}
 
 /*=============== VIDEO ===============*/
+.video__container{
+    padding-bottom: 1rem;
+}
 
+.video__description{
+    text-align: center;
+    margin-bottom: var(--mb-2-5);
+}
+
+.video__content{
+    position: relative;
+}
+
+.video__button{
+    position: absolute;
+    right: 1rem;
+    bottom: -1rem;
+    padding: 1rem 1.5rem;
+}
+
+.video__button-icon{
+    font-size: 1.2rem;
+}
 
 /*=============== PLACES ===============*/
+.place__card,
+.place__img{
+    height: 230px;
+}
+
+.place__container{
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+}
+
+.place__card{
+    position: relative;
+    overflow: var(--img-hidden);
+}
+
+.place__content,
+.place__title{
+    color: var(--white-color);
+}
+
+.place__content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: .75rem .75rem 1rem;
+}
+
+.place__rating{
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+}
+
+.place__rating-icon{
+    font-size: .75rem;
+    margin-right: var(--mb-0-25);
+}
+
+.place__rating-number{
+    font-size: var(--small-font-size);
+}
+
+.place__subtitle,
+.place__price{
+    display: block;
+}
+
+.place__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-25);
+}
+
+.place__subtitle{
+    font-size: var(--smaller-font-size);
+    margin-bottom: var(--mb-1-25);
+}
+
+.place__button{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: .75rem 1rem;
+}
+
+.place__img{
+    transition: var(--img-transition);
+}
+
+.place__card:hover .place__img{
+    transform: var(--img-scale);
+}
+
+/*=============== SUBSCRIBE ===============*/
+
+
+/*=============== SPONSORS ===============*/
+
+
+/*=============== FOOTER ===============*/
+
+
+/*=============== SCROLL UP ===============*/
