--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,12 +599,122 @@ input{
 }
 
 /*=============== SUBSCRIBE ===============*/
+.subscribe__bg{
+    background-color: var(--first-color-second);
+    padding: 2.5rem 0;
+}
 
+.subscribe__title,
+.subscribe__description{
+    color: var(--white-color);
+}
+
+.subscribe__description {
+    text-align: center;
+    margin-bottom: var(--mb-2-5);
+  }
+
+.subscribe__form{
+    background-color: var(--input-color);
+    padding: .5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.subscribe__input{
+    width: 70%;
+    padding-right: .5rem;
+    background-color: var(--input-color);
+    color: var(--text-color);
+}
+
+.subscribe__input::placeholder{
+    color: var(--text-color);
+}
 
 /*=============== SPONSORS ===============*/
+.sponsor__container{
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    justify-items: center;
+    row-gap: 3.5rem;
+}
 
+.sponsor__img{
+    width: 90px;
+    filter: invert(.7);
+    transition: var(--img-transition);
+}
+
+.sponsor__content:hover .sponsor__img{
+    filter: invert(.5);
+}
 
 /*=============== FOOTER ===============*/
+.footer__container{
+    row-gap: 5rem;
+}
 
+.footer__content{
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    row-gap: 2rem;
+}
+
+.footer__title,
+.footer__subtitle{
+    font-size: var(--h3-font-size);
+}
+
+.footer__title{
+    margin-bottom: var(--mb-0-5);
+}
+
+.footer__description{
+    margin-bottom: var(--mb-2);
+}
+
+.footer__social{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1-25);
+}
+
+.footer__subtitle{
+    margin-bottom: var(--mb-1);
+}
+
+.footer__item{
+    margin-bottom: var(--mb-0-75);
+}
+
+.footer__link{
+    color: var(--text-color);
+}
+
+.footer__link:hover{
+    color: var(--title-color);
+}
+
+.footer__rights{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+    text-align: center;
+}
+
+.footer__copy,
+.footer__terms-link{
+    font-size: var(--small-font-size);
+    color:var(--text-color-light);
+}
+
+.footer__terms{
+    display: flex;
+    column-gap: 1.5rem;
+    justify-content: center;
+}
+
+.footer__terms-link:hover{
+    color: var(--text-color);
+}
 
 /*=============== SCROLL UP ===============*/
